# genomic_relatedness_classifier

./: .gitignore  FONT_SETUP.md  Final_Conclusion.md  README.md  README_KR.md  compare_datasets.py  font-config.css  model_input_with_kinship_filtered_cM_1.csv  model_input_with_kinship_filtered_cM_3.csv  model_input_with_kinship_filtered_cM_6.csv  pyproject.toml  results_cM_1.md
data/processed/: cnn_cM_1.pth  cnn_cM_1_smote.pth  cnn_cM_1_weighted.pth  cnn_cM_1_zero.pth  evaluation_results_cM_1_smote.json  evaluation_results_cM_1_weighted.json  evaluation_results_cM_1_zero.json  mlp_cM_1.pth  mlp_cM_1_smote.pth  mlp_cM_1_weighted.pth  mlp_cM_1_zero.pth  scaler_cM_1.pkl  scaler_cM_3.pkl  scaler_cM_6.pkl  top_features_cM_1.pkl  top_features_cM_3.pkl  top_features_cM_6.pkl
docs/: DATA_LOSS_EXPLANATION_cM6.md  DATA_LOSS_EXPLANATION_cM6_KR.md  font-config.css  plan.md  plan_KR.md  rebalancing_methods.md  rebalancing_methods_KR.md
docs/assets/: diagram_new_KR.md  flow_report.md  flow_report_KR.md  mermaid_diagram.md  mermaid_diagram_KR.md
documentation/: plan.md
reports/cM_1/: results.json  results.md
reports/cM_3/: results.md  (+1 more)
scripts/: archive_reports.py  build_report.py  cleanup_legacy_reports.py  data_prep.py  data_prep_cM_1.py  data_prep_percentile.py  eda.py  eda_cM_1.py  evaluate_models.py  feature_engineering.py  feature_selection.py  feature_selection_cM_1.py  generate_results_table.py  kinship_analysis_dashboard.py  kinship_interactive_studio.py  kinship_length_analysis.py  prepare_new_datasets.py  run_all.py  run_all_percentile.py  train_models.py  verify.py
(+9 files in other folders)
