[project]
name = "genomic-relatedness-classifier"
version = "0.1.0"
description = "Genomic relatedness classification pipeline with reporting"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = "Proprietary"
authors = [
  {name = "Project Team"}
]
keywords = ["genomics", "classification", "kinship", "machine-learning"]

# Core runtime dependencies inferred from import usage.
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "imbalanced-learn>=0.11",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "scipy>=1.11"
]

[tool.uv]
package = false
dev-dependencies = [
  "ruff>=0.5.0",
  "black>=23.0",
  "mypy>=1.6",
  "pytest>=7.4"
]

# NOTE on PyTorch CUDA wheels:
# uv/pip will default to CPU wheels from PyPI unless a CUDA-specific index is provided.
# If you need a specific CUDA build, install with the official index, e.g.:
#   uv pip install --index-url https://download.pytorch.org/whl/cu121 torch torchvision torchaudio
# or configure an alternate index in your environment. We leave this unset for portability.

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
